调整项目结构，能够正常连mysql

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:8080/db_zsl
+url=jdbc:mysql://localhost:3306/financial
 username=root
 password=root
 #定义初始连接数
