--- a/pom.xml
+++ b/pom.xml
@@ -281,6 +281,13 @@
       <version>1.3.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>20.0</version>
+    </dependency>
+
+
 
   </dependencies>
   <build>
