--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <org.slf4j.version>1.7.25</org.slf4j.version>
     <ch.qos.logback.version>1.2.3</ch.qos.logback.version>
     <logback.ext.spring.version>0.1.2</logback.ext.spring.version>
-    <webmagic.version>0.6.1</webmagic.version>
+    <webmagic.version>0.7.2-SNAPSHOT</webmagic.version>
     <jackson.version>1.9.13</jackson.version>
   </properties>
 
